--- a/front/tsconfig.app.json
+++ b/front/tsconfig.app.json
@@ -40,10 +40,10 @@
       "@store": [
         "src/store/index"
       ],
-      "@types/*": [
+      "@customtypes/*": [
         "src/types/*"
       ],
-      "@types": [
+      "@customtypes": [
         "src/types/index"
       ],
       "@styles/*": [
