--- a/front/package.json
+++ b/front/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
+    "redux-persist": "^6.0.0",
     "tsconfig-paths": "^4.2.0",
     "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "^5.1.4",
