--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "cookie-universal": "^2.2.2",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
