--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.3",
     "cookie-universal": "^2.2.2",
     "lottie-react": "^2.4.0",
+    "primeicons": "^7.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
